Corrected overflow mistake (added x)

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 @layer utilities {
